{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 20,
  "lineage": "8d40d9a8-f559-576a-07bc-03d7d0e6d137",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/Nextopsvnet1/subnets/subnet01",
            "name": "subnet01",
            "resource_group_name": "Nextopsvideos",
            "virtual_network_name": "Nextopsvnet1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "bf173bc0-4504-49cf-8c19-f39673c03bca",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/Nextopsvnet1",
            "location": "eastus",
            "name": "Nextopsvnet1",
            "resource_group_name": "Nextopsvideos",
            "subnets": [
              "subnet01"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkInterfaces/Nextopsvm-nic",
            "internal_domain_name_suffix": "ya3rppyeixhutdaz4olhhqb1zc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/Nextopsvnet1/subnets/subnet01"
              }
            ],
            "location": "eastus",
            "name": "Nextopsvm-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Nextopsvideos"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg1",
            "data.azurerm_subnet.subnet1",
            "data.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkSecurityGroups/Nextops-nsg1",
            "location": "eastus",
            "name": "Nextops-nsg1",
            "resource_group_name": "Nextopsvideos",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkSecurityGroups/Nextops-nsg1/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "Nextops-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Nextopsvideos",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "data.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/Nextopsvnet1/subnets/subnet01",
            "network_security_group_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/networkSecurityGroups/Nextops-nsg1",
            "subnet_id": "/subscriptions/28a659e3-7f8b-4051-8037-2fc40fed19d3/resourceGroups/Nextopsvideos/providers/Microsoft.Network/virtualNetworks/Nextopsvnet1/subnets/subnet01"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "data.azurerm_resource_group.rg1",
            "data.azurerm_subnet.subnet1",
            "data.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    }
  ]
}